--- a/templates/visuals.html.erb
+++ b/templates/visuals.html.erb
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
   <link rel="stylesheet" href="/revealjs/css/reveal.css">
-  <link rel="stylesheet" href="/revealjs/css/theme/black.css" id="theme">
+  <link rel="stylesheet" href="/revealjs/css/theme/solarized.css" id="theme">
 
   <!-- Code syntax highlighting -->
   <link rel="stylesheet" href="/revealjs/lib/css/zenburn.css">
@@ -61,6 +61,8 @@
   // Full list of configuration options available at:
   // https://github.com/hakimel/reveal.js#configuration
   Reveal.initialize({
+    width: 1024,
+    height: 768,
     controls: true,
     progress: true,
     history: true,
